[Misc] Fix SonarQube issues needing a judgement call
* java:S6885 - use Math.clamp() instead of nested Math.min()/Math.max()
* java:S1872 - compare the return type with void.class instead of comparing class names
* java:S1193 - catch InterruptedException explicitly instead of testing it with instanceof

Co-Authored-By: Vincent Massol <vincent@massol.net>